--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+@import "../node_modules/@angular/material/prebuilt-themes/indigo-pink.css";
+
+// Custom CSS to components
+@import './assets/scss/components/table';
+@import './assets/scss/components/form';
+
+
+body {
+    margin: 0;
+    height: calc(100vh - 44px);
+    width: 100%;
+    background-image: url('/assets/images/fondo.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
